kubernetes/data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
      - name: data
        image: georgiyovchev/f_project:data
        ports:
        - containerPort: 5002
