kubernetes/data-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
      - name: data
        image: georgiyovchev/data-service:tag
        ports:
        - containerPort: 5002
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: data
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  selector:
    app: data
