kubernetes/data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  selector:
    app: data
