kubernetes/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: georgiyovchev/frontend-service:tag
        ports:
        - containerPort: 5003
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8888
      targetPort: 5003
  selector:
    app: frontend
