kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 5003
      targetPort: 5003
      nodePort: 30003
  selector:
    app: frontend
