kubernetes/user-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: georgiyovchev/f_project:user
        ports:
        - containerPort: 5001
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        effect: "NoSchedule"
---

apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: user
