kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: user
